# OmniWordlistPro

./: .gitignore  Cargo.toml  DEVELOPMENT.md  INSTALL.md  INSTALLATION.md  INSTALLATION_COMPLETE.md  QUICK_START.md  README.md  README_PYTHON.md  UPDATE_SUMMARY.md  install-verbose.sh  install.sh  omni.py  quick-install.sh  requirements.txt  setup.py
Documentation/: FEATURES.md  INSTALL.md  INSTALLATION.md  INSTALL_BUILD_PROGRESS.md  INSTALL_OUTPUT_EXAMPLES.md  INSTALL_SCRIPTS.md  QUICK_START.md  UPDATE_SUMMARY.md
omniwordlist/: __init__.py  charset.py  cli.py  config.py  error.py  fields.py  filters.py  generator.py  presets.py  storage.py  transforms.py
omniwordlist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: charset.rs  config.rs  error.rs  fields.rs  filters.rs  generator.rs  lib.rs  main.rs  presets.rs  storage.rs  transforms.rs  ui.rs
tests/: test_basic.py
