[package]
name = "omniwordlist"
version = "1.1.0"
edition = "2021"
authors = ["Aaryan Bansal"]
description = "Enterprise-grade ultra-customizable wordlist generation platform"
license = "MIT"

[[bin]]
name = "omni"
path = "src/main.rs"

[dependencies]
# TUI & Display
ratatui = "0.26"
crossterm = "0.27"
unicode-width = "0.1"
strip-ansi-escapes = "0.2"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"

# Async & Concurrency
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
rayon = "1.8"
crossbeam = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Storage & Persistence
rusqlite = { version = "0.30", features = ["bundled", "chrono", "uuid"] }
rocksdb = "0.21"
tempfile = "3.8"

# Compression
flate2 = "1.0"
bzip2 = "0.4"
lz4_flex = "0.11"
zstd = "0.13"

# Hashing & Cryptography
blake2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64"] }
sha2 = "0.10"
md5 = "0.7"
regex = "1.10"
unicode-normalization = "0.1"

# String Processing & Encoding
encoding_rs = "0.8"
unidecode = "0.3"
unicode_categories = "0.1"
levenshtein = "1.0"
soundex = "0.1"

# HTTP/S3
reqwest = { version = "0.11", features = ["stream", "multipart"] }
aws-sdk-s3 = "1.11"
aws-config = "1.1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# Data Structures
indexmap = "2.1"
dashmap = "5.5"
parking_lot = "0.12"
lazy_static = "1.4"
num_cpus = "1.16"

# Utilities
rand = "0.8"
itertools = "0.12"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }
num-format = "0.4"
humansize = "2.1"
colored = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"

[dev-dependencies]
tempdir = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
